--- a/css/style.css
+++ b/css/style.css
@@ -4006,6 +4006,11 @@ html, body {
           flex: 0 1 48.8%;
 }
 
+@media (max-width: 1800px) {
+  .admin-panel-vertical-line {
+    left: 271px;
+  }
+}
 @media (max-width: 1700px) {
   .admin-panel-content__info-list {
     -ms-flex-wrap: wrap;
@@ -4128,4 +4133,104 @@ html, body {
   .admin-panel-content-aside-header__title {
     word-break: break-all;
   }
+}
+.admin-panel-info-users {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.admin-panel-info-new-users__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+.admin-panel-info-new-users__form input {
+  width: 420px;
+  outline: 0;
+  border: 1px solid transparent;
+  -webkit-box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+  padding: 17px 30px;
+  padding-left: 61px;
+  font-weight: 500;
+}
+.admin-panel-info-new-users__form button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+.admin-panel-info-new-users__form input::-webkit-input-placeholder {
+  color: rgba(29, 29, 57, 0.6);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.admin-panel-info-new-users__form input::-moz-placeholder {
+  color: rgba(29, 29, 57, 0.6);
+  -moz-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.admin-panel-info-new-users__form input:-ms-input-placeholder {
+  color: rgba(29, 29, 57, 0.6);
+  -ms-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.admin-panel-info-new-users__form input::-ms-input-placeholder {
+  color: rgba(29, 29, 57, 0.6);
+  -ms-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.admin-panel-info-new-users__form input::placeholder {
+  color: rgba(29, 29, 57, 0.6);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.admin-panel-info-new-users__form input:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.admin-panel-info-new-users__form input:focus::-moz-placeholder {
+  color: transparent;
+}
+.admin-panel-info-new-users__form input:focus:-ms-input-placeholder {
+  color: transparent;
+}
+.admin-panel-info-new-users__form input:focus::-ms-input-placeholder {
+  color: transparent;
+}
+.admin-panel-info-new-users__form input:focus::placeholder {
+  color: transparent;
+}
+.admin-panel-info-new-users__form svg {
+  position: absolute;
+  left: 30px;
+}
+.admin-panel-info-new-users__form input[type=search]::-webkit-search-decoration,
+.admin-panel-info-new-users__form input[type=search]::-webkit-search-cancel-button,
+.admin-panel-info-new-users__form input[type=search]::-webkit-search-results-button,
+.admin-panel-info-new-users__form input[type=search]::-webkit-search-results-decoration {
+  display: none;
+}
+
+.admin-panel-info-new-users__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
 }
