--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -29,6 +29,8 @@
     @include transition();
     @include flex-center();
 
+    font-weight: 500;
+
     @if $type == 'gradient' {
 
         background: linear-gradient(135deg, #F8A4D8 0%, #6C63FF 100%);
@@ -45,6 +47,19 @@
         &:hover {
             background-color: #1D1D39;
             color: #fff;
+        }
+
+    }
+    @else if $type == 'func' {
+
+        color: #fff;
+        background-color: #6C63FF;
+        border: 1px solid transparent;
+
+        &:hover {
+            background-color: transparent;
+            border-color: #1D1D39;
+            color: #1D1D39;
         }
 
     }
